# events_app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README  README.md  docker-compose.yml  pyproject.toml
event_api/config/: asgi.py  settings.py  urls.py  wsgi.py
event_api/event_registrations/: apps.py  models.py  serializers.py  urls.py  views.py
event_api/event_registrations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
event_api/events/: models.py  permissions.py  serializers.py  urls.py  views.py
event_api/events/migrations/: 0001_initial.py  0002_initial.py
event_api/users/: models.py  serializers.py  urls.py  views.py
event_api/users/migrations/: 0001_initial.py
